Added get image function

--- a/backend/mock-filesystem/page-1-info.yaml
+++ b/backend/mock-filesystem/page-1-info.yaml
@@ -1,5 +1,7 @@
-title: The week before surgery
-text:
+title: "The week before surgery"
+text: |
+  # Hello 
+  
   There are several steps that you can take at home in the days and weeks before your
   operation to help ensure a smooth and pleasant return from hospital.
   Preparing your mind, body and home for your recovery are just a few key steps to
