--- a/nextron-app/package.json
+++ b/nextron-app/package.json
@@ -1,29 +1,42 @@
 {
-  "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
-  "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
-  "main": "app/background.js",
-  "scripts": {
-    "dev": "nextron",
-    "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "electron": "^21.3.3",
-    "electron-builder": "^23.6.0",
-    "next": "^12.3.4",
-    "nextron": "^8.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
-  }
+    "private": true,
+    "name": "my-nextron-app",
+    "description": "My application description",
+    "version": "1.0.0",
+    "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+    "main": "app/background.js",
+    "scripts": {
+        "dev": "nextron",
+        "build": "nextron build",
+        "postinstall": "electron-builder install-app-deps",
+        "wdio": "wdio run ./wdio.conf.js"
+    },
+    "dependencies": {
+        "@cypress/electron-plugin": "^1.1.0",
+        "axios": "^1.4.0",
+        "cypress": "^12.17.0",
+        "electron-serve": "^1.1.0",
+        "electron-store": "^8.1.0"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.35.1",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.26",
+        "@wdio/cli": "^8.12.2",
+        "@wdio/local-runner": "^8.12.1",
+        "@wdio/mocha-framework": "^8.12.1",
+        "@wdio/spec-reporter": "^8.12.2",
+        "chromedriver": "^100.0.0",
+        "electron": "^21.3.3",
+        "electron-builder": "^23.6.0",
+        "next": "^12.3.4",
+        "nextron": "^8.5.0",
+        "playwright": "^1.35.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5",
+        "wdio-chromedriver-service": "^8.1.1",
+        "wdio-electron-service": "^4.1.0"
+    }
 }
